SRC/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Automobile_Tag_Details_1__c</fullName>
        <label>Automobile Tag Details 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Automobile_Tag_Details_2__c</fullName>
        <label>Automobile Tag Details 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Automobile_Tag_Details_3__c</fullName>
        <label>Automobile Tag Details 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Return_To_HQ__c</fullName>
        <label>Return To HQ</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>